cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1738-find-kth-largest-xor-coordinate-value leetcode/editor/cn/1738-find-kth-largest-xor-coordinate-value.cpp)
add_executable(1049-last-stone-weight-ii leetcode/editor/cn/1049-last-stone-weight-ii.cpp)
add_executable(879-profitable-schemes leetcode/editor/cn/879-profitable-schemes.cpp)