cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1738-find-kth-largest-xor-coordinate-value leetcode/editor/cn/1738-find-kth-largest-xor-coordinate-value.cpp)
add_executable(518-coin-change-2 leetcode/editor/cn/518-coin-change-2.cpp)
add_executable(278-first-bad-version leetcode/editor/cn/278-first-bad-version.cpp)
add_executable(322-coin-change leetcode/editor/cn/322-coin-change.cpp)
add_executable(374-guess-number-higher-or-lower leetcode/editor/cn/374-guess-number-higher-or-lower.cpp)