cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(1738-find-kth-largest-xor-coordinate-value leetcode/editor/cn/1738-find-kth-largest-xor-coordinate-value.cpp)
add_executable(518-coin-change-2 leetcode/editor/cn/518-coin-change-2.cpp)
add_executable(278-first-bad-version leetcode/editor/cn/278-first-bad-version.cpp)
add_executable(322-coin-change leetcode/editor/cn/322-coin-change.cpp)
add_executable(374-guess-number-higher-or-lower leetcode/editor/cn/374-guess-number-higher-or-lower.cpp)
add_executable(852-peak-index-in-a-mountain-array leetcode/editor/cn/852-peak-index-in-a-mountain-array.cpp)
add_executable(877-stone-game leetcode/editor/cn/877-stone-game.cpp)
add_executable(401-binary-watch leetcode/editor/cn/401-binary-watch.cpp)
add_executable(1791-find-center-of-star-graph leetcode/editor/cn/1791-find-center-of-star-graph.cpp)